@@ -43,11 +43,10 @@
 
 /** Create, initialize, and link in a new node with the given properties
  * @param head a double pointer to the first node of the linked list
- * @param pid the process ID to create the new node with, from ut_pid
  * @param tty the device name/tty to create node with, from ut_line
  *
  */
-void create_node(struct proc_list **head, pid_t pid, char *tty){
+void create_node(struct proc_list **head, char *tty){
 	/* Allocate memory for the new node */
 	struct proc_list *new = malloc(sizeof(struct proc_list));
 	if(new == NULL){
@@ -63,32 +62,11 @@ void create_node(struct proc_list **head, pid_t pid, char *tty){
 		exit(EXIT_FAILURE);
 	}
 
-	new->proc_id = pid;
 	strncpy(new->proc_tty, tty, MAXTTY);
 
 	/* Add the new node to the head of the list */
 	new->proc_next = (*head);
 	(*head) = new;
-}
-
-
-/** Find a node member with the given process ID
- * @param head a pointer to the start of the list
- * @param pid the process ID number of the node to find
- * @returns a pointer to the node or NULL if not found
- *
- */
-struct proc_list *find_pid(struct proc_list *head, pid_t pid){
-	while(head != NULL){
-		if(head->proc_id == pid){
-			/* We found the node */
-			return(head);
-		}
-		/* Continue looking... */
-		head = head->proc_next;
-	}
-	/* PID not found in list */
-	return(NULL);
 }
 
 
@@ -109,31 +87,6 @@ struct proc_list *find_tty(struct proc_list *head, char *tty){
 	}
 	/* PID not found in list */
 	return(NULL);
-}
-
-
-/** Unlink and free a node from the list specified by process id.
- * @param head a double pointer to the first node of the linked list
- * @param pid the process ID of the node to remove
- *
- */
-void delete_pid(struct proc_list **head, pid_t pid){
-	struct proc_list *tmp = NULL;
-
-	while(*head != NULL){
-		if((*head)->proc_id == pid){
-			/* We found the node to delete */
-			tmp = (*head);
-			/* Remove the node from the list and free it */
-			(*head) = (*head)->proc_next;
-			free(tmp->proc_tty);
-			free(tmp);
-			return;
-		} else {
-			/* Keep looking */
-			head = &((*head)->proc_next);
-		}
-	}
 }
 
 
