@@ -55,7 +55,6 @@
 #define MAXTTY	50
 
 struct proc_list{
-	pid_t proc_id;			/* The process id of this entry */
 	char *proc_tty;			/* A string to hold ut_line */
 	struct proc_list *proc_next;	/* Pointer to next member in linked list */
 };
@@ -63,20 +62,10 @@ struct proc_list{
 
 /** Create, initialize, and link in a new node with the given properties
  * @param head a double pointer to the first node of the linked list
- * @param pid the process ID to create the new node with, from ut_pid
  * @param tty the device name/tty to create node with, from ut_line
  *
  */
-void create_node(struct proc_list **head, pid_t pid, char *tty);
-
-
-/** Find a node member with the given process ID
- * @param head a pointer to the start of the list
- * @param pid the process ID number of the node to find
- * @returns a pointer to the node or NULL if not found
- *
- */
-struct proc_list *find_pid(struct proc_list *head, pid_t pid);
+void create_node(struct proc_list **head, char *tty);
 
 
 /** Find a node member with the given TTY value
@@ -86,14 +75,6 @@ struct proc_list *find_pid(struct proc_list *head, pid_t pid);
  *
  */
 struct proc_list *find_tty(struct proc_list *head, char *tty);
-
-
-/** Unlink and free a node from the list specified by process id.
- * @param head a double pointer to the first node of the linked list
- * @param pid the process ID of the node to remove
- *
- */
-void delete_pid(struct proc_list **head, pid_t pid);
 
 
 /** Unlink and free a node from the list specified by the tty.
